Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

19-May-2013 Michael Babker
 # [#30926] Beez5: Additional < in category list.  Thanks Constantin Romankiewicz

13-May-2013 Jean-Marie Simonet
 ^ [#30663] Default Value for the Option Show Sub-menu Items to be Set as Yes. Thanks Mig
 # [#30873] *Multilanguage: PHP warning when logging.

05-May-2013 Michael Babker
 ^ [#30810] Disable ReCaptcha plugin when Joomla is installed.  Thanks Nick Savov

03-May-2013 Jean-Marie Simonet
 # [#30571] * Strict Standards: Declaration of ContentModelCategories::populateState() should be compatible with JModel::populateState()
 # [#30103] Cannot delete web site entry for a contact. Thanks Elin Waring
 # [#30748] *Multilanguage issue with contacts. Thanks Benjamin Trenkle
 # [#30672] Category blog: COM_CONTENT_NO_ARTICLES message is missing. Thanks Charles Perk.

30-Apr-2013 Jean-Marie Simonet
 # [#29922] Browser Agent Google Chrome on IOS. Thanks Georges Wilson.

29-Apr-2013 Jean-Marie Simonet
 # [#30723] Can't upload file after update from 2.5.9 to 2.5.10. Thanks Mark Dexter

-------------------- 2.5.11 Stable Release 26-April-2013] ------------------

26-Apr-2013 Mark Dexter
 # [#30681] Error in Database tab in Extension Manager. Thanks Amirol Ahmad.
 # [#30702] Only titles display in featured/blogged views when hide intro text is selected.
 # [#30725] Exception thrown for empty path. Thanks Elin Waring.

26-Apr-2013 Jean-Marie Simonet
 # [#30717] Memcached driver breaks Joomla configuration page. Thanks Ofer Cohen

-------------------- 2.5.10 Stable Release 24-April-2013] ------------------

23-Apr-2013 Mark Dexter
 # [#30652] Commit for issue 29916 broke Smart Search indexing. Thanks Don Gilbert.

14-Apr-2013 Mark Dexter