@@ -197,7 +197,9 @@ $params		= (isset($this->state->params)) ? $this->state->params : new JObject();
 	</table>
 
 	<?php //Load the batch processing form. ?>
-	<?php echo $this->loadTemplate('batch'); ?>
+	<?php if ($user->authorize('core.create', 'com_banners') && $user->authorize('core.edit', 'com_banners') && $user->authorize('core.edit.state', 'com_banners')) : ?>
+		<?php echo $this->loadTemplate('batch'); ?>
+	<?php endif;?>
 
 	<div>
 		<input type="hidden" name="task" value="" />
