@@ -168,7 +168,9 @@ $saveOrder	= $listOrder == 'a.ordering';
 	</table>
 
 	<?php //Load the batch processing form. ?>
-	<?php echo $this->loadTemplate('batch'); ?>
+	<?php if ($user->authorize('core.create', 'com_weblinks') && $user->authorize('core.edit', 'com_weblinks') && $user->authorize('core.edit.state', 'com_weblinks')) : ?>
+		<?php echo $this->loadTemplate('batch'); ?>
+	<?php endif;?>
 
 	<div>
 		<input type="hidden" name="task" value="" />
