@@ -28,6 +28,7 @@ $ -> Language fix or change
 
 19-May-2013 Michael Babker
  # [#30926] Beez5: Additional < in category list.  Thanks Constantin Romankiewicz
+ # [#30906] *Batch usage needs strict permissions.  Thanks Jean-Marie Simonet
 
 13-May-2013 Jean-Marie Simonet
  ^ [#30663] Default Value for the Option Show Sub-menu Items to be Set as Yes. Thanks Mig
